Closed
Bug 262798
Opened 21 years ago
Closed 20 years ago
Atom/RSS feeds without <link href> elements show failed to load message
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
RESOLVED
FIXED
Firefox 2 beta2
People
(Reporter: noamtm, Assigned: philor)
References
()
Details
(Keywords: fixed1.8.1)
Attachments
(3 files)
|
257 bytes,
text/xml
|
Details | |
|
366 bytes,
application/xml
|
Details | |
|
1.10 KB,
patch
|
vlad
:
review+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; rv:1.7.3) Gecko/20040913 Firefox/0.10.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; rv:1.7.3) Gecko/20040913 Firefox/0.10.1
Gmail just added an atom feed to every account, that allows you to get a list of
new messages in your account (if you have a gmail account, add the above URL as
a live bookmark).
It works okay, but when I have no new messages (hence there are no links in the
feed), the loading of the feed fails, instead of showing some kind of an "empty"
item.
Reproducible: Always
Steps to Reproduce:
Comment 1•21 years ago
|
||
Are you sure you gave the right address
https://gmail.google.com/gmail/feed/atom
I'm not getting any feed there at all
| Reporter | ||
Comment 2•21 years ago
|
||
in reply to comment #1:
I just clicked the link in your comment, and yes, it is the right address. But I
think you have to be logged on to your gmail account before.
Anyway, this link is shown on your inbox view - note the atom icon below the
labels list.
Comment 3•21 years ago
|
||
(In reply to comment #2)
> in reply to comment #1:
> I just clicked the link in your comment, and yes, it is the right address. But I
> think you have to be logged on to your gmail account before.
> Anyway, this link is shown on your inbox view - note the atom icon below the
> labels list.
I am logged in, but there's no link below labels.
So obviously this isn't implemented for all yet.
| Reporter | ||
Comment 4•21 years ago
|
||
Since (as it seems from comment #3) the service is not public yet, I'm
attaching a testcase.
Comment 5•21 years ago
|
||
GMAIL offers RSS and if there is no new item it sends an empty feed
<feed version="0.3">
<title>Gmail - Inbox for myname@gmail.com</title>
<tagline>New messages in your Gmail Inbox</tagline>
<link rel="alternate" href="http://gmail.google.com/gmail" type="text/html"/>
<modified>2004-10-07T19:23:22Z</modified>
</feed>
the normal feed with a link looks like
<feed version="0.3">
<title>Gmail - Inbox for myname@gmail.com</title>
<tagline>New messages in your Gmail Inbox</tagline>
<link rel="alternate" href="http://gmail.google.com/gmail" type="text/html"/>
<modified>2004-10-07T19:18:42Z</modified>
<entry>
<title>[Bug 258189] Use new icons for Yahoo and eBay search</title>
<summary>https://bugzilla.mozilla.org/show_bug.cgi?id=258189
tiesebarrell@gmail.com changed: What |Removed …</summary>
<link rel="alternate" href="http://gmail.google.com/gmail" type="text/html"/>
<modified>2004-10-07T19:15:54Z</modified>
<issued>2004-10-07T19:15:54Z</issued>
<id>tag:gmail.google.com,2004:00000000000000000000</id>
<author>
<name>bugzilla-daemon</name>
<email>bugzilla-daemon@mozilla.org</email>
</author>
</entry>
</feed>
If a live bookmark does not contain any items it should display a message like
"no items available".
"Live bookmarks feed failed to load..." is a misleading message because you get
the same if e.g. you are disconnected from the internet.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking-aviary1.0?
Comment 6•21 years ago
|
||
We don't have a string for this, and its not a blocker at this stage.
Not that I know Atom, but if there's a title and an alternate link (in Gmail's
case the Inbox) we could just have that as a single link. But I don't know how
non-scary it is to do this. vlad?
Severity: normal → minor
Flags: blocking-aviary1.0? → blocking-aviary1.0-
Summary: Atom feeds without <link href> elements fail to load → Atom feeds without <link href> elements show failed to load message
Updated•21 years ago
|
Summary: Atom feeds without <link href> elements show failed to load message → Atom/RSS feeds without <link href> elements show failed to load message
| Assignee | ||
Comment 7•21 years ago
|
||
We've got a perfectly good string, that we already use for RSS 1.0,
intentionally or not: with an empty rdf:Seq we display (Empty). That's a lot
less confusing for the usual uses of empty feeds than inserting a non-item-item
linked to the channel/link.
Not blocking for sure; but the right thing to do in this case would be to just
not add any children to the live bookmark folder, and let it pick up the default
"Empty" item.
Assignee: vladimir → vladimir+bm
Assignee: vladimir+bm → nobody
| Assignee | ||
Comment 9•20 years ago
|
||
Failing to find items we can use isn't failure (in edge cases of RSS-like
things that aren't actually feeds, it could be failure, but that's
indistinguishable from a feed without useful items, and "(Empty)" is as true as
"Live bookmark failed to load" even then).
| Assignee | ||
Updated•20 years ago
|
Hardware: PC → All
Target Milestone: --- → Firefox1.6-
Version: unspecified → Trunk
Comment on attachment 200425 [details] [diff] [review]
call empty rss and atom feeds empty
I'm trying to think why picking up the (Empty) item would be bad, but I can't
think of a reason. so r+.
Attachment #200425 -
Flags: review?(vladimir) → review+
| Assignee | ||
Updated•20 years ago
|
Whiteboard: [checkin needed]
Comment 11•20 years ago
|
||
Trunk:
mozilla/browser/components/bookmarks/src/nsBookmarksFeedHandler.cpp;
new revision: 1.9;
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Comment 12•20 years ago
|
||
Should this land on the branch for b2?
| Assignee | ||
Comment 13•20 years ago
|
||
Comment on attachment 200425 [details] [diff] [review]
call empty rss and atom feeds empty
Ack ulp! I'd forgotten there was an unsynced gap before cross-commit that mattered again post-Places. Yes, I think we want it, and it's certainly baked long enough on the trunk to be quite safe.
Attachment #200425 -
Flags: approval1.8.1?
Updated•20 years ago
|
Attachment #200425 -
Flags: approval1.8.1? → approval1.8.1+
Updated•20 years ago
|
Whiteboard: [checkin needed (1.8 branch)]
Comment 14•20 years ago
|
||
mozilla/browser/components/bookmarks/src/nsBookmarksFeedHandler.cpp 1.8.2.5
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
Target Milestone: Firefox 2 → Firefox 2 beta2
Version: Trunk → 2.0 Branch
Comment 15•20 years ago
|
||
sorry for bugspam, long-overdue mass reassign of ancient QA contact bugs, filter on "beltznerLovesGoats" to get rid of this mass change
QA Contact: mconnor → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•