Bug 262798: Atom/RSS feeds without <link href> elements show "failed to load" message, patch by Phil Ringnalda <bugzilla@philringnalda.com>, r=vlad